--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Unsplash</string>
+
     <string name="search">Поиск</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragment_favorite_images_empty">Пусто!</string>
+    <string name="menu_item_search">Поиск</string>
 </resources>
