--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,5 +5,7 @@
     <string name="search">Поиск</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fragment_favorite_images_empty">Пусто!</string>
+
     <string name="menu_item_search">Поиск</string>
+    <string name="menu_item_clear">Очистить</string>
 </resources>
