--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="search">Search</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fragment_favorite_images_empty">Empty!</string>
+
     <string name="menu_item_search">Search</string>
+    <string name="menu_item_clear">Clear</string>
 </resources>
