--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Unsplash</string>
+    <string name="app_name">Image Stock</string>
 
     <string name="search">Поиск</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
