--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Unsplash</string>
+    <string name="app_name">Image Stock</string>
 
     <string name="search">Search</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
